@@ -1,3 +1,5 @@
+HEAD
+	+ Bugfix: Escape some files to allow spaces in server names
 1.3.15
 	+ Set a respawn limit when the client is internal
 1.3.14
